--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,8 @@
     <p>It's also much more healthier then the conventional lasagna made from 
         traditional ingridients.</p>
 
-        <ul><strong>ingridients</strong>
+        <h3>Ingridients</h3>
+        <ul>
             <li>1 (16 ounce) package lasagna noodles</li>
             <li>2 tablespoons vegetable oil</li>
             <li>1 pound fresh mushrooms, sliced </li>
@@ -20,7 +21,19 @@
             <li>½ cup grated Parmesan cheese</li>
             <li>Your favourite spices</li>
         </ul>
-        
-        <ol></ol>
-
-    
+        <h3>Steps to cook</h3>
+        <ol>
+            <li>Cook lasagna noodles in a large pot of boiling water for 10 minutes, or until al dente. 
+            Rinse with cold water, and drain.</li>
+        <li>Heat oil in a large saucepan. 
+            Cook and stir together mushrooms, green peppers, onion, and garlic until tender, about 5 minutes. 
+            Stir in pasta sauce and basil; bring to a boil. Reduce heat, and simmer 15 minutes.</li>
+        <li>While the sauce is simmering, mix together ricotta, 
+            2 cups mozzarella cheese, and eggs in a medium bowl.</li>
+        <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
+        <li>Spread 1 cup cooked tomato and vegetable sauce into the bottom of a greased 9x13-inch baking dish. 
+            Lay down half of the lasagna noodles and layer half each ricotta mix, sauce, and Parmesan cheese on top. 
+            Repeat layering again with noodles, ricotta mix, sauce, and Parmesan cheese. 
+            Top with remaining 2 cups mozzarella cheese.</li>
+        <li>Bake, uncovered, for 40 minutes. Let stand 15 minutes before serving.</li>
+        </ol>
