--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/lasagna.html">Pasta salad</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/p_salad.html">Pasta salad</a></li>
+        <li><a href="recipes/lasagna.html">Tiramisu</a></li>
     </ul>
 </body>
 </html>
