Add all 3 recipes

--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -10,33 +10,36 @@
         is credited with its invention in the 1970s. In fact, he was widely known as "the father of tiramisu.
         " The word "tiramisu" translates to "pick-me-up."</p>
 
-    <p>It's also much more healthier then the conventional lasagna made from 
-        traditional ingridients.</p>
+    <p>Tiramisu usually contains alcohol. Marsala wine is the traditional choice, but this 
+        recipe calls for a mixture of strong coffee and rum. If you prefer not to use alcohol, just leave it out. 
+        It will still 
+        be delicious with just the coffee alone (just make sure the coffee is extra strong).</p>
 
-        <h3>Ingridients</h3>
+        <h2>Ingridients</h2>
         <ul>
-            <li>1 (16 ounce) package lasagna noodles</li>
-            <li>2 tablespoons vegetable oil</li>
-            <li>1 pound fresh mushrooms, sliced </li>
-            <li>¾ cup chopped green bell pepper </li>
-            <li>¾ cup chopped onion</li>
-            <li>2 eggs</li>
-            <li>½ cup grated Parmesan cheese</li>
-            <li>Your favourite spices</li>
+            <li>6 large egg yolks </li>
+            <li>¾ cup white sugarl</li>
+            <li>⅔ cup milk </li>
+            <li>1 ¼ cups heavy cream </li>
+            <li>½ teaspoon vanilla extract </li>
+            <li>1 pound mascarpone cheese, at room temperature</li>
+            <li>¼ cup strong brewed coffee, at room temperature</li>
+            <li>2 tablespoons rum</li>
+            <li>2 (3 ounce) packages ladyfinger cookies </li>
+            <li>1 tablespoon unsweetened cocoa powder</li>
         </ul>
-        <h3>Steps to cook</h3>
+        <h2>Steps to cook</h2>
         <ol>
-            <li>Cook lasagna noodles in a large pot of boiling water for 10 minutes, or until al dente. 
-            Rinse with cold water, and drain.</li>
-        <li>Heat oil in a large saucepan. 
-            Cook and stir together mushrooms, green peppers, onion, and garlic until tender, about 5 minutes. 
-            Stir in pasta sauce and basil; bring to a boil. Reduce heat, and simmer 15 minutes.</li>
-        <li>While the sauce is simmering, mix together ricotta, 
-            2 cups mozzarella cheese, and eggs in a medium bowl.</li>
-        <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
-        <li>Spread 1 cup cooked tomato and vegetable sauce into the bottom of a greased 9x13-inch baking dish. 
-            Lay down half of the lasagna noodles and layer half each ricotta mix, sauce, and Parmesan cheese on top. 
-            Repeat layering again with noodles, ricotta mix, sauce, and Parmesan cheese. 
-            Top with remaining 2 cups mozzarella cheese.</li>
-        <li>Bake, uncovered, for 40 minutes. Let stand 15 minutes before serving.</li>
+            <li>Whisk together egg yolks and sugar in a medium saucepan until well blended. 
+                Whisk in milk and cook over medium heat, stirring constantly, until mixture comes to a boil.</li>
+            <li>Boil gently for 1 minute, then remove from the heat and allow to cool slightly.</li>
+            <li>Cover tightly and chill in the refrigerator for 1 hour.</li>
+            <li>Beat cream and vanilla in a medium bowl with an electric mixer until stiff peaks form.</li>
+            <li>Remove egg yolk mixture from the refrigerator; add mascarpone cheese and whisk until smooth.</li>
+            <li>Combine coffee and rum in a small bowl. 
+            Split ladyfingers in half lengthwise and drizzle with the coffee mixture.</li>
+            <li>Arrange 1/2 of the soaked ladyfingers in the bottom of a 7x11-inch dish. Spread 1/2 of the mascarpone mixture over the ladyfingers, then spread 1/2 of the whipped cream over top. 
+                Repeat layers once more. 
+                Sprinkle cocoa powder over top.</li>
+            <li>Cover and refrigerate until set, 4 to 6 hours.</li>
         </ol>
