--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
         <li><a href="recipes/p_salad.html">Pasta salad</a></li>
-        <li><a href="recipes/lasagna.html">Tiramisu</a></li>
+        <li><a href="recipes/tiramisu.html">Tiramisu</a></li>
     </ul>
 </body>
 </html>
